<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
 android:orientation="horizontal"
    android:layout_height="match_parent"
    tools:context=".BottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/language"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/language"
            android:layout_margin="6dp"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/language_24"
            android:drawablePadding="10dp"/>

       <Spinner
           android:layout_width="wrap_content"
           android:layout_marginStart="150dp"
           android:entries="@array/lanuage"
           android:id="@+id/spinner"
            android:spinnerMode="dialog"
           android:layout_marginTop="6dp"
           android:layout_height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/moodlayout"
        android:layout_below="@+id/language"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            app:drawableLeftCompat="@drawable/dark_mode_24"
            android:drawablePadding="10dp"
            android:layout_marginStart="6dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:trackTint="@color/slow"
            app:thumbTint="@color/mycolor"
            android:layout_weight="1"
            android:thumb="@drawable/dark_mode_24"
            app:useMaterialThemeColors="false"
            android:textSize="19sp"
            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
            android:layout_margin="6dp"
            android:text="@string/dark_mode"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_below="@id/moodlayout"
        android:id="@+id/space"
        android:layout_height="100dp"/>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/hide"
        android:id="@+id/hide"
        android:layout_centerInParent="true"
        android:layout_below="@id/space"
        android:layout_height="wrap_content"/>



</RelativeLayout>